# xgen-waveform-viewer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  main.py  prepare-v3.0-release.ps1  pyproject.toml  release.ps1  requirements.txt  setup-dev.ps1  verify-v3.0-complete.ps1  xgen-waveform-viewer.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: RELEASE_NOTES_V2.1.md  RELEASE_NOTES_V2.2.md  RELEASE_NOTES_V2.3.md  RELEASE_NOTES_V2.4.1.md  RELEASE_NOTES_V2.4.md  RELEASE_NOTES_V3.0.md  V2.4_QUICK_GUIDE.md  V3.0_QUICK_GUIDE.md  V3.0_UPGRADE_GUIDE.md
examples/: generate_test_data.py  v2.2_measurement_example.py  v2.3_performance_example.py  v2.4_playback_and_export_example.py  v3.0_custom_protocol_example.py  v3.0_firmware_config_example.py  v3.0_multi_channel_example.py
examples/protocols/: ascii_example.json  binary_custom_example.json  modbus_rtu_example.json
src/xgen_waveform_viewer/: __init__.py  channel_panel.py  config.py  exporter.py  firmware_config.py  firmware_panel.py  logger.py  main.py  main_window.py  measurement_tools.py  multi_channel.py  performance.py  playback.py  playback_panel.py  protocol.py  protocol_config_panel.py  recorder.py  serial_reader.py  settings.py  statistics_panel.py  theme.py  trigger.py  version.py  waveform_widget.py
test_data/: README.md
