[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xgen-waveform-viewer"
version = "3.0.0"
description = "Professional multi-channel ADC waveform viewer with custom protocol support and firmware management."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "X-GEN-LAB" },
]
dependencies = [
    "pyqtgraph>=0.13.0",
    "PyQt6>=6.4.0",
    "PyQt6-SVG>=6.4.0",
    "pyserial>=3.5",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
full = [
    "scipy>=1.10.0",  # For MATLAB .mat export
    "h5py>=3.8.0",    # For HDF5 format
]

[project.urls]
Homepage = "https://github.com/X-Gen-Lab/xgen-waveform-viewer"
Repository = "https://github.com/X-Gen-Lab/xgen-waveform-viewer"

[project.scripts]
xgen-waveform-viewer = "xgen_waveform_viewer.main:main"

[tool.setuptools.packages.find]
where = ["src"]
